# monorep

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
apps/job-a/: app.py
apps/job-a/tests/: test_job_a.py
apps/job-b/: Dockerfile  app.py
apps/job-c/: Dockerfile  app.py
apps/job_a/: Dockerfile  app.py
apps/server-one/: Dockerfile  app.py  requirements.txt
apps/server-one/tests/: test_integration.py
apps/server-three/: Dockerfile  app.py  requirements.txt  service.proto
apps/server-two/: Dockerfile  app.py  requirements.txt
lib/verse/: common.py
scripts/: AlignDependencies.py  DependencyManager.py  DownloadFile.py  download_static_data.sh  main.py
tests/: test_runtime.py
tests/verse/: test_common.py
